<resources>
    <string name="app_name">KISSAN BANDHU</string>
    <string name="buyer">BUYER</string>
    <string name="login">LOGIN</string>
    <string name="otp">Enter OTP</string>
    <string name="name">Enter Name</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="phone">Enter Number</string>
    <string name="rent_btn">Rent</string>
    <string name="buy_btn">Buy</string>
    <string name="hello">Hello</string>
    <string name="equipments">Equipments</string>
    <string name="rent">RENT</string>
    <string name="buy">BUY</string>
    <string name="equip">Equipments</string>
    <string name="pesticides">Pesticides</string>
    <string name="search">Search</string>
    <string name="search_">Search</string>
    <string name="tractor">Tractor</string>
    <string name="trolley">Trolley</string>
    <string name="seeder">Seeder</string>
    <string name="cultivator">Cultivator</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="tool">Selected Tool:</string>
    <string name="startdate">Start Date:</string>

    <string name="duration">Duration</string>
    <string name="end">End Date:</string>
    <string name="duration_">Duration:</string>
    <string name="price">Price:</string>
    <string name="select_hint">Select</string>
    <string name="tagline">- Go On, Get Your <i> Happy Farming </i>Out.</string>
    <string name="add">Enter your address:</string>
    <string name="enter_number">Enter Number</string>
    <string name="toolname">Tool:</string>
    <string name="durationn">Duration:</string>
    <string name="pricee">Price:</string>
    <string name="dname">Dealer Name:</string>
    <string name="dcontact">Dealer Contact No:</string>
    <string name="atabron">Atabron</string>
    <string name="pestfix">PestFix</string>
    <string name="actara">Actara</string>
    <string name="virus">Virus-G</string>
    <string name="pestname">Pesticide:</string>

</resources>