<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buyer_rentmenu"
    android:orientation="vertical">

    <SearchView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/custom_edittext"
        android:iconifiedByDefault="false"
        android:queryHint="Search">
    </SearchView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="132dp"
            android:layout_height="149dp"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/tractor_new" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="75dp"
            app:srcCompat="@drawable/trolley" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Tractor"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/tractor"
            android:layout_marginLeft="35dp"
            android:textSize="15dp" />

        <Button
            android:id="@+id/Trolley"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/trolley"
            android:layout_marginLeft="70dp"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp" >


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="158dp"
            android:layout_height="169dp"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/seeder" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="130dp"
            android:layout_height="159dp"
            android:layout_marginLeft="65dp"
            app:srcCompat="@drawable/cultivator" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seeder"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/seeder"
            android:layout_marginLeft="45dp"
            android:textSize="15dp" />

        <Button
            android:id="@+id/cultivator"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/cultivator"
            android:layout_marginLeft="65dp"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>