<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="#2BA548"
    tools:context=".sellerhome">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/user_shape"
        android:orientation="vertical">



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:background="#48000000" >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rent"
                android:textSize="40dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="102dp"
                android:layout_height="95dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="40dp"
                app:srcCompat="@drawable/tractor" />

            <Button
                android:id="@+id/equipments"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="25dp"
                android:text="@string/equipments"
                android:backgroundTint="#DC3E33"
                android:textSize="15dp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:background="#48000000" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:textSize="40dp"
                android:textStyle="bold"
                android:layout_marginLeft="40dp"
                android:textColor="@color/black"/>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/area"
                    android:layout_width="119dp"
                    android:layout_height="153dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/app_name"
                    android:paddingRight="20dp"
                    android:src="@drawable/tractor" />

                <ImageView
                    android:id="@+id/volume"
                    android:layout_width="143dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:paddingLeft="45dp"
                    android:src="@drawable/greenleaf" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/equipments_buy"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:text="@string/equip"
                    android:backgroundTint="#DC3E33"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/pesticides"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:text="@string/pesticides"
                    android:layout_marginLeft="25dp"
                    android:backgroundTint="#DC3E33"
                    android:textSize="15dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav"
                android:layout_alignParentBottom="true"
                app:menu="@menu/menu_bar"
                app:itemIconTint="@color/white"
                app:itemTextColor="@color/white"
                android:background="#2BA548"/>


        </RelativeLayout>

    </LinearLayout>




</LinearLayout>